# flock

./: .env.example  .gitignore  Add_New_Model_Providers_Guide.md  Add_New_Tools_Guide.md  LICENSE  README.md  README_cn.md  README_ja.md  WorkFlow.md  package.json  pnpm-lock.yaml  pyproject.toml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0af178b00b09_rename_open_api_key_to_api_key_and_open_.py  4d6839c8481b_first_generate.py  6e44776dc6dd_add_public_api_endpoints.py  725ae2e95b83_rename_open_api_key_to_api_key_and_open_.py  (+7 more)
backend/app/api/: deps.py  main.py
backend/app/core/: celery_app.py  config.py  db.py  security.py  state.py
backend/app/core/model_provider_plugins/examples/openai_provider/: pyproject.toml
backend/app/curd/: modelprovider.py  models.py
backend/app/tasks/: ignite_tasks.py  qdrant_tasks.py  tasks.py
backend/docker/: entrypoint.sh
docker/: docker-compose.localbuild.yml  docker-compose.middleware.yml  docker-compose.yml  entrypoint.sh
docker/code-interpreter/: Dockerfile  healthcheck.py
docs/: README_cn.md  README_ja.md
web/: .eslintrc.js  Dockerfile  next.config.mjs  openapi.json  openapi0107.json  openapi0120.json  package.json  pnpm-lock.yaml  tailwind.config.ts
web/docker/: entrypoint.sh
web/public/: runtime-config.js
web/src/: theme.tsx
web/src/app/: layout.tsx
web/src/client/: index.ts
web/src/hooks/: useSubgraphsQuery.ts
web/src/i18n/: i18next-config.ts
web/src/stores/: chatTeamIDStore.ts
(+332 files in other folders)
